[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-delivery-tracker"
version = "0.1.0"
description = "CLI tool for tracking package deliveries in Switzerland"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Paul-Louis Hery", email = "Paullouis.hery@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
swiss-delivery-tracker = "swiss_delivery_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/PLhery/swiss-delivery-tracker"
Issues = "https://github.com/PLhery/swiss-delivery-tracker/issues"
